--- a/templates/docs/sidebar_partials/sidebar-docs-javascript.mustache
+++ b/templates/docs/sidebar_partials/sidebar-docs-javascript.mustache
@@ -28,6 +28,8 @@
    <li><a href="#js-buttons">Button</a></li>
    <li><a href="#js-collapse">Collapse</a></li>
    <li><a href="#js-carousel">Carousel</a></li>
+   <li><a href="#js-flipview">FlipView</a></li>
    <li><a href="#js-typeahead">Typeahead</a></li>
    <li><a href="#js-affix">Affix</a></li>
+   <li><a href="#js-datepicker">DatePicker</a></li>
 </ul>
