adding toast to docs. various typo fixed.

--- a/templates/docs/_layout.mustache
+++ b/templates/docs/_layout.mustache
@@ -64,12 +64,12 @@
    <div class="navbar metro-navbar navbar-fixed-top">
       <div class="navbar-inner">
          <div class="container">
-            <button type="button"class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
                <span class="icon-bar"></span>
                <span class="icon-bar"></span>
                <span class="icon-bar"></span>
             </button>
-            <h1 class="brand" href="./index.html">BootMetro <small>documentation</small></h1>
+            <h1 class="brand">BootMetro <small>documentation</small></h1>
             <div class="nav-collapse collapse">
                <ul class="nav">
                   <li class="{{docs-index}}">
@@ -96,14 +96,16 @@
       </div>
    </div>
 
+   <div id="alerts"></div>
+
    <div id="doc-container" class="container">
       <div class="row">
          <div class="bs-docs-sidebar span3">
-            {{>sidebar}}
+{{>sidebar}}
          </div>
 
          <div class="bs-docs-container span9">
-            {{>body}}
+{{>body}}
          </div>
       </div>
    </div>
@@ -114,7 +116,7 @@
    <footer class="bs-docs-footer">
       <div class="container">
          <p>Designed and built by <a target="_blank" href="https://twitter.com/aozoralabs">@aozoralabs</a>.</p>
-         <p>Code licensed under <a target="_blank" href="http://www.apache.org/licenses/LICENSE-2.0">Apache License v2.0</a> or <a target="_blank" href="http://www.gnu.org/licenses/gpl-2.0.html">GPL2, documentation under <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.</p>
+         <p>Code licensed under <a target="_blank" href="http://www.apache.org/licenses/LICENSE-2.0">Apache License v2.0</a> or <a target="_blank" href="http://www.gnu.org/licenses/gpl-2.0.html">GPL2</a>, documentation under <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.</p>
       </div>
    </footer>
 
