--- a/templates/docs/docs-standard-components.mustache
+++ b/templates/docs/docs-standard-components.mustache
@@ -1201,9 +1201,9 @@
 <!-- Navbar
 ================================================== -->
 <div class="bs-docs-section">
-<div class="page-header">
-   <h1 id="navbar">Navbar</h1>
-</div>
+   <div class="page-header">
+      <h1 id="navbar">Navbar</h1>
+   </div>
 
 
 <h2 id="navbar-basic">Basic navbar</h2>
@@ -1463,7 +1463,7 @@
                      </ul>
                   </li>
                </ul>
-               <form class="navbar-search pull-left" action="">
+               <form class="navbar-search pull-left">
                   <input type="text" class="search-query span2" placeholder="Search">
                </form>
                <ul class="nav pull-right">
@@ -1984,22 +1984,22 @@
       <ul class="thumbnails">
          <li class="span3">
             <a href="#" class="thumbnail">
-               <img data-src="holder.js/260x180" alt="">
+               <img data-src="holder.js/260x180" alt=""/>
             </a>
          </li>
          <li class="span3">
             <a href="#" class="thumbnail">
-               <img data-src="holder.js/260x180" alt="">
+               <img data-src="holder.js/260x180" alt=""/>
             </a>
          </li>
          <li class="span3">
             <a href="#" class="thumbnail">
-               <img data-src="holder.js/260x180" alt="">
+               <img data-src="holder.js/260x180" alt=""/>
             </a>
          </li>
          <li class="span3">
             <a href="#" class="thumbnail">
-               <img data-src="holder.js/260x180" alt="">
+               <img data-src="holder.js/260x180" alt=""/>
             </a>
          </li>
       </ul>
@@ -2011,7 +2011,7 @@
       <ul class="thumbnails">
          <li class="span4">
             <div class="thumbnail">
-               <img data-src="holder.js/300x200" alt="">
+               <img data-src="holder.js/300x200" alt=""/>
                <div class="caption">
                   <h3>Thumbnail label</h3>
                   <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
@@ -2021,7 +2021,7 @@
          </li>
          <li class="span4">
             <div class="thumbnail">
-               <img data-src="holder.js/300x200" alt="">
+               <img data-src="holder.js/300x200" alt=""/>
                <div class="caption">
                   <h3>Thumbnail label</h3>
                   <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
@@ -2031,7 +2031,7 @@
          </li>
          <li class="span4">
             <div class="thumbnail">
-               <img data-src="holder.js/300x200" alt="">
+               <img data-src="holder.js/300x200" alt=""/>
                <div class="caption">
                   <h3>Thumbnail label</h3>
                   <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
@@ -2057,7 +2057,7 @@
    &lt;ul class="thumbnails"&gt;
      &lt;li class="span4"&gt;
        &lt;a href="#" class="thumbnail"&gt;
-         &lt;img data-src="holder.js/300x200" alt=""&gt;
+         &lt;img data-src="holder.js/300x200" alt=""/&gt;
        &lt;/a&gt;
      &lt;/li&gt;
      ...
@@ -2068,7 +2068,7 @@
    &lt;ul class="thumbnails"&gt;
      &lt;li class="span4"&gt;
        &lt;div class="thumbnail"&gt;
-         &lt;img data-src="holder.js/300x200" alt=""&gt;
+         &lt;img data-src="holder.js/300x200" alt=""/&gt;
          &lt;h3&gt;Thumbnail label&lt;/h3&gt;
          &lt;p&gt;Thumbnail caption...&lt;/p&gt;
        &lt;/div&gt;
@@ -2082,27 +2082,27 @@
    <ul class="thumbnails">
       <li class="span4">
          <a href="#" class="thumbnail">
-            <img data-src="holder.js/360x270" alt="">
+            <img data-src="holder.js/360x270" alt=""/>
          </a>
       </li>
       <li class="span3">
          <a href="#" class="thumbnail">
-            <img data-src="holder.js/260x120" alt="">
+            <img data-src="holder.js/260x120" alt=""/>
          </a>
       </li>
       <li class="span2">
          <a href="#" class="thumbnail">
-            <img data-src="holder.js/160x120" alt="">
+            <img data-src="holder.js/160x120" alt=""/>
          </a>
       </li>
       <li class="span3">
          <a href="#" class="thumbnail">
-            <img data-src="holder.js/260x120" alt="">
+            <img data-src="holder.js/260x120" alt=""/>
          </a>
       </li>
       <li class="span2">
          <a href="#" class="thumbnail">
-            <img data-src="holder.js/160x120" alt="">
+            <img data-src="holder.js/160x120" alt=""/>
          </a>
       </li>
    </ul>
@@ -2116,7 +2116,7 @@
 ================================================== -->
 <div class="bs-docs-section">
    <div class="page-header">
-      <h1 id="alert">Alerts <small>Styles for success, warning, and error messages</small></h1>
+      <h1 id="alerts">Alerts <small>Styles for success, warning, and error messages</small></h1>
    </div>
 
    <h2 id="alerts-default">Default alert</h2>
@@ -2127,12 +2127,12 @@
          <strong>Warning!</strong> Best check yo self, you're not looking too good.
       </div>
    </div>
-   <pre class="prettyprint linenums">
-   &lt;div class="alert"&gt;
-     &lt;button type="button" class="close" data-dismiss="alert"&gt;&lt;/button&gt;
-     &lt;strong&gt;Warning!&lt;/strong&gt; Best check yo self, you're not looking too good.
-   &lt;/div&gt;
-   </pre>
+<pre class="prettyprint linenums">
+&lt;div class="alert"&gt;
+  &lt;button type="button" class="close" data-dismiss="alert"&gt;&lt;/button&gt;
+  &lt;strong&gt;Warning!&lt;/strong&gt; Best check yo self, you're not looking too good.
+&lt;/div&gt;
+</pre>
 
    <h3>Dismiss buttons</h3>
    <p>Mobile Safari and Mobile Opera browsers, in addition to the <code>data-dismiss="alert"</code> attribute, require an <code>href="#"</code> for the dismissal of alerts when using an <code>&lt;a&gt;</code> tag.</p>
@@ -2147,7 +2147,7 @@
    <hr class="bs-docs-separator">
 
 
-   <h2>Options</h2>
+   <h2 id="alerts-block">Options</h2>
    <p>For longer messages, increase the padding on the top and bottom of the alert wrapper by adding <code>.alert-block</code>.</p>
    <div class="bs-docs-example">
       <div class="alert alert-block">
@@ -2156,19 +2156,19 @@
          <p>Best check yo self, you're not looking too good. Nulla vitae elit libero, a pharetra augue. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</p>
       </div>
    </div>
-   <pre class="prettyprint linenums">
-   &lt;div class="alert alert-block"&gt;
-     &lt;button type="button" class="close" data-dismiss="alert"&gt;&lt;/button&gt;
-     &lt;h4&gt;Warning!&lt;/h4&gt;
-     Best check yo self, you're not...
-   &lt;/div&gt;
-   </pre>
+<pre class="prettyprint linenums">
+&lt;div class="alert alert-block"&gt;
+  &lt;button type="button" class="close" data-dismiss="alert"&gt;&lt;/button&gt;
+  &lt;h4&gt;Warning!&lt;/h4&gt;
+  Best check yo self, you're not...
+&lt;/div&gt;
+</pre>
 
 
    <hr class="bs-docs-separator">
 
 
-   <h2>Contextual alternatives</h2>
+   <h2 id="alerts-alternatives">Contextual alternatives</h2>
    <p>Add optional classes to change an alert's connotation.</p>
 
    <h3>Error or danger</h3>
@@ -2178,11 +2178,11 @@
          <strong>Oh snap!</strong> Change a few things up and try submitting again.
       </div>
    </div>
-   <pre class="prettyprint linenums">
-   &lt;div class="alert alert-error"&gt;
-     ...
-   &lt;/div&gt;
-   </pre>
+<pre class="prettyprint linenums">
+&lt;div class="alert alert-error"&gt;
+  ...
+&lt;/div&gt;
+</pre>
 
    <h3>Success</h3>
    <div class="bs-docs-example">
@@ -2191,11 +2191,11 @@
          <strong>Well done!</strong> You successfully read this important alert message.
       </div>
    </div>
-   <pre class="prettyprint linenums">
-   &lt;div class="alert alert-success"&gt;
-     ...
-   &lt;/div&gt;
-   </pre>
+<pre class="prettyprint linenums">
+&lt;div class="alert alert-success"&gt;
+  ...
+&lt;/div&gt;
+</pre>
 
    <h3>Information</h3>
    <div class="bs-docs-example">
@@ -2204,11 +2204,114 @@
          <strong>Heads up!</strong> This alert needs your attention, but it's not super important.
       </div>
    </div>
-   <pre class="prettyprint linenums">
-   &lt;div class="alert alert-info"&gt;
-     ...
-   &lt;/div&gt;
-   </pre>
+<pre class="prettyprint linenums">
+&lt;div class="alert alert-info"&gt;
+  ...
+&lt;/div&gt;
+</pre>
+
+</div>
+
+
+
+
+<div class="bs-docs-section">
+   <div class="page-header">
+      <h1 id="toasts">Toast notifications <small></small></h1>
+   </div>
+
+   <blockquote>
+      A toast notification is a transient message to the user that contains relevant, time-sensitive information and provides quick access to related content in an app.
+      <small>Toast notification overview (Windows Store apps)</small>
+   </blockquote>
+   <p>Following there are all the possible templates and styles for different kind of toast notifications.</p>
+   <p><span class="label label-important">Important:</span> the dismiss functionality <strong>requires the <a href="#tooltips">Bootstrap Tooltip</a> plugin to be included.</strong></p>
+
+   <!-- Text Only Templates
+   ================================================== -->
+   <h2 id="toasts-text">Text Only Templates <small></small></h2>
+
+   <div class="bs-docs-example">
+
+      <div class="toast toasttext01">
+         <button type="button" class="close" data-dismiss="alert"></button>
+         <p>Body text that wraps over three lines. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula</p>
+      </div>
+
+      <div class="toast toasttext02">
+         <button type="button" class="close" data-dismiss="alert"></button>
+         <h4>Heading text</h4>
+         <p>Body text that wraps over two lines. Vivamus elementum semper nisi.</p>
+      </div>
+
+      <div class="toast toasttext03">
+         <button type="button" class="close" data-dismiss="alert"></button>
+         <h4>Heading text that wraps over two lines. Vivamus elementum semper nisi.</h4>
+         <p>Body text that wraps over two lines. Vivamus elementum semper nisi.</p>
+      </div>
+
+      <div class="toast toasttext04">
+         <button type="button" class="close" data-dismiss="alert"></button>
+         <h4>Heading text</h4>
+         <p>Body text that wraps over two lines.</p>
+         <p>Body text that wraps over two lines.</p>
+      </div>
+
+   </div>
+
+<pre class="prettyprint linenums">
+&lt;div class="toast toasttext01"&gt;
+   &lt;button type="button" class="close" data-dismiss="alert"&gt;&lt;/button&gt;
+   &lt;p&gt;Body text that wraps over three lines. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula&lt;/p&gt;
+&lt;/div&gt;
+
+&lt;div class="toast toasttext02"&gt;
+   &lt;button type="button" class="close" data-dismiss="alert"&gt;&lt;/button&gt;
+   &lt;h4&gt;Heading text&lt;/h4&gt;
+   &lt;p&gt;Body text that wraps over two lines. Vivamus elementum semper nisi.&lt;/p&gt;
+&lt;/div&gt;
+
+&lt;div class="toast toasttext03"&gt;
+   &lt;button type="button" class="close" data-dismiss="alert"&gt;&lt;/button&gt;
+   &lt;h4&gt;Heading text that wraps over two lines. Vivamus elementum semper nisi.&lt;/h4&gt;
+   &lt;p&gt;Body text that wraps over two lines. Vivamus elementum semper nisi.&lt;/p&gt;
+&lt;/div&gt;
+
+&lt;div class="toast toasttext04"&gt;
+   &lt;button type="button" class="close" data-dismiss="alert"&gt;&lt;/button&gt;
+   &lt;h4&gt;Heading text&lt;/h4&gt;
+   &lt;p&gt;Body text that wraps over two lines.&lt;/p&gt;
+   &lt;p&gt;Body text that wraps over two lines.&lt;/p&gt;
+&lt;/div&gt;
+</pre>
+
+
+   <h2 id="toasts-imagetext">Image & Text Templates <small></small></h2>
+   <div class="bs-docs-example">
+      <div class="toast toastimageandtext01">
+         <button type="button" class="close" data-dismiss="alert"></button>
+         <img src="assets/img/avatar-movie-puzzles-2.jpg" alt="" />
+         <p>Body text that wraps over three lines. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula</p>
+      </div>
+   </div>
+<pre class="prettyprint linenums">
+
+</pre>
+
+
+   <h2 id="toasts-usage">Usage</h2>
+   <div class="bs-docs-example">
+
+
+
+
+   </div>
+<pre class="prettyprint linenums">
+   ...
+   &lt;div id="alerts"&gt;&lt;/div&gt;
+   ...
+</pre>
+
 
 </div>
 
@@ -2221,8 +2324,6 @@
    <div class="page-header">
       <h1 id="progress">Progress bars <small>For loading, redirecting, or action status</small></h1>
    </div>
-
-   <p class="label label-warning">For Metro style progress bars see the <a href="./metro-components.html">Metro Components</a> page.</p>
 
    <h2>Examples and markup</h2>
 
@@ -2384,7 +2485,7 @@
    <div class="bs-docs-example">
       <div class="media">
          <a class="pull-left" href="#">
-            <img class="media-object" data-src="holder.js/64x64">
+            <img class="media-object" data-src="holder.js/64x64" alt=""/>
          </a>
          <div class="media-body">
             <h4 class="media-heading">Media heading</h4>
@@ -2393,14 +2494,14 @@
       </div>
       <div class="media">
          <a class="pull-left" href="#">
-            <img class="media-object" data-src="holder.js/64x64">
+            <img class="media-object" data-src="holder.js/64x64" alt=""/>
          </a>
          <div class="media-body">
             <h4 class="media-heading">Media heading</h4>
             Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
             <div class="media">
                <a class="pull-left" href="#">
-                  <img class="media-object" data-src="holder.js/64x64">
+                  <img class="media-object" data-src="holder.js/64x64" alt=""/>
                </a>
                <div class="media-body">
                   <h4 class="media-heading">Media heading</h4>
@@ -2413,7 +2514,7 @@
    <pre class="prettyprint linenums">
    &lt;div class="media"&gt;
      &lt;a class="pull-left" href="#"&gt;
-       &lt;img class="media-object" data-src="holder.js/64x64"&gt;
+       &lt;img class="media-object" data-src="holder.js/64x64" alt=""/&gt;
      &lt;/a&gt;
      &lt;div class="media-body"&gt;
        &lt;h4 class="media-heading"&gt;Media heading&lt;/h4&gt;
@@ -2437,7 +2538,7 @@
       <ul class="media-list">
          <li class="media">
             <a class="pull-left" href="#">
-               <img class="media-object" data-src="holder.js/64x64">
+               <img class="media-object" data-src="holder.js/64x64" alt=""/>
             </a>
             <div class="media-body">
                <h4 class="media-heading">Media heading</h4>
@@ -2445,7 +2546,7 @@
                <!-- Nested media object -->
                <div class="media">
                   <a class="pull-left" href="#">
-                     <img class="media-object" data-src="holder.js/64x64">
+                     <img class="media-object" data-src="holder.js/64x64" alt=""/>
                   </a>
                   <div class="media-body">
                      <h4 class="media-heading">Nested media heading</h4>
@@ -2453,7 +2554,7 @@
                      <!-- Nested media object -->
                      <div class="media">
                         <a class="pull-left" href="#">
-                           <img class="media-object" data-src="holder.js/64x64">
+                           <img class="media-object" data-src="holder.js/64x64" alt=""/>
                         </a>
                         <div class="media-body">
                            <h4 class="media-heading">Nested media heading</h4>
@@ -2465,7 +2566,7 @@
                <!-- Nested media object -->
                <div class="media">
                   <a class="pull-left" href="#">
-                     <img class="media-object" data-src="holder.js/64x64">
+                     <img class="media-object" data-src="holder.js/64x64" alt=""/>
                   </a>
                   <div class="media-body">
                      <h4 class="media-heading">Nested media heading</h4>
@@ -2476,7 +2577,7 @@
          </li>
          <li class="media">
             <a class="pull-right" href="#">
-               <img class="media-object" data-src="holder.js/64x64">
+               <img class="media-object" data-src="holder.js/64x64" alt=""/>
             </a>
             <div class="media-body">
                <h4 class="media-heading">Media heading</h4>
@@ -2489,7 +2590,7 @@
    &lt;ul class="media-list"&gt;
      &lt;li class="media"&gt;
        &lt;a class="pull-left" href="#"&gt;
-         &lt;img class="media-object" data-src="holder.js/64x64"&gt;
+         &lt;img class="media-object" data-src="holder.js/64x64"/&gt;
        &lt;/a&gt;
        &lt;div class="media-body"&gt;
          &lt;h4 class="media-heading"&gt;Media heading&lt;/h4&gt;
