--- a/templates/docs/sidebar_partials/sidebar-docs-standard-components.mustache
+++ b/templates/docs/sidebar_partials/sidebar-docs-standard-components.mustache
@@ -75,8 +75,16 @@
       <a href="#alerts">Alerts</a>
       <ul class="nav">
          <li><a href="#alerts-default">Default alert</a></li>
-         <!--<li><a href="#alerts-block">Block alerts</a></li>-->
-         <!--<li><a href="#alerts-alternatives">Contextual alternatives</a></li>-->
+         <li><a href="#alerts-block">Block alerts</a></li>
+         <li><a href="#alerts-alternatives">Contextual alternatives</a></li>
+      </ul>
+   </li>
+   <li>
+      <a href="#toasts">Toast Notification</a>
+      <ul class="nav">
+         <li><a href="#toasts-default">Default toast</a></li>
+         <li><a href="#toasts-text">Text only</a></li>
+         <li><a href="#toasts-imagetext">Image & Text</a></li>
       </ul>
    </li>
    <li>
