integrated toast notifications into docs

--- a/less/bootmetro/responsive-767px-max.less
+++ b/less/bootmetro/responsive-767px-max.less
@@ -5,7 +5,12 @@
 
 @media (max-width: 767px) {
 
-
+   //   always show close button on mobile/tablet
+   .toast .close,
+   .modal .close,
+   .alert .close {
+      display: inline-block !important;
+   }
 
 }
 
