--- a/less/bootmetro/responsive-768px-979px.less
+++ b/less/bootmetro/responsive-768px-979px.less
@@ -5,6 +5,12 @@
 
 @media (min-width: 768px) and (max-width: 979px) {
 
+   //   always show close button on mobile/tablet
+   .toast .close,
+   .modal .close,
+   .alert .close {
+      display: inline-block !important;
+   }
 
 }
 
