integrated toast notifications into docs

--- a/templates/docs/_layout.mustache
+++ b/templates/docs/_layout.mustache
@@ -96,7 +96,7 @@
       </div>
    </div>
 
-   <div id="alerts"></div>
+   <div id="alerts-container"></div>
 
    <div id="doc-container" class="container">
       <div class="row">
