--- a/templates/docs/docs-standard-components.mustache
+++ b/templates/docs/docs-standard-components.mustache
@@ -1956,20 +1956,6 @@
 
 
 
-<!--&lt;!&ndash; Typographic components-->
-<!--================================================== &ndash;&gt;-->
-<!--<div class="bs-docs-section">-->
-   <!--<div class="page-header">-->
-      <!--<h1 id="type-components">Typographic components</h1>-->
-   <!--</div>-->
-
-
-
-
-
-<!--</div>-->
-
-
 
 <!-- Thumbnails
 ================================================== -->
@@ -2231,7 +2217,7 @@
    ================================================== -->
    <h2 id="toasts-text">Text Only Templates <small></small></h2>
 
-   <div class="bs-docs-example">
+   <div class="bs-docs-example bs-docs-example-toasts">
 
       <div class="toast toasttext01">
          <button type="button" class="close" data-dismiss="alert"></button>
@@ -2287,7 +2273,7 @@
 
 
    <h2 id="toasts-imagetext">Image & Text Templates <small></small></h2>
-   <div class="bs-docs-example">
+   <div class="bs-docs-example bs-docs-example-toasts">
       <div class="toast toastimageandtext01">
          <button type="button" class="close" data-dismiss="alert"></button>
          <img src="assets/img/avatar-movie-puzzles-2.jpg" alt="" />
@@ -2299,18 +2285,61 @@
 </pre>
 
 
-   <h2 id="toasts-usage">Usage</h2>
-   <div class="bs-docs-example">
+   <h2 id="toasts-usage">Live demo</h2>
+   <p>Show a toast notification via JavaScript by clicking the button below. Click it multiple times to display many instances.</p>
+   <div class="bs-docs-example bs-docs-example-toasts-demo">
 
+      <a id="show-toast-button" href="#toast-example1" class="btn btn-success">Show Toast!</a>
 
-
+      <div id="toast-example1" class="toast toasttext02 fade">
+         <button type="button" class="close" data-dismiss="alert"></button>
+         <h4>Heading text</h4>
+         <p>Body text that wraps over two lines. Vivamus elementum semper nisi.</p>
+      </div>
 
    </div>
-<pre class="prettyprint linenums">
-   ...
-   &lt;div id="alerts"&gt;&lt;/div&gt;
-   ...
+   <h3>Sample code</h3>
+   <p>Put under the body element the following div, used as a container for all notifications:</p>
+<pre class="prettyprint">
+   &lt;div id="alerts-container"&gt;&lt;/div&gt;
 </pre>
+   <p>here the markup sample:</p>
+<pre class="prettyprint linenums">
+&lt;a id="show-toast-button" href="#toast-example1" class="btn btn-success"&gt;Show Toast!&lt;/a&gt;
+
+&lt;div id="toast-example1" class="toast toasttext02 fade"&gt;
+   &lt;button type="button" class="close" data-dismiss="alert"&gt;&lt;/button&gt;
+   &lt;h4&gt;Heading text&lt;/h4&gt;
+   &lt;p&gt;Body text that wraps over two lines. Vivamus elementum semper nisi.&lt;/p&gt;
+&lt;/div&gt;
+</pre>
+   <p>CSS code to support toast positioning as Windows 8 does:</p>
+<pre class="prettyprint linenums">
+#alerts-container {
+   position: fixed;
+   top: 5px;
+   right: 5px;
+   padding: 0;
+   z-index: 1100;
+}
+
+#alerts-container .toast {
+   /* add a shadow */
+   -webkit-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
+      box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
+}
+</pre>
+
+   <p>Use this javascript code to show the toast:</p>
+<pre class="prettyprint linenums">
+// toasts demo
+$('#show-toast-button').click(function(e){
+   e.preventDefault();
+   var $toast = $( $(this).attr('href')).clone();
+   $('#alerts-container').append($toast.addClass('in'));
+});
+</pre>
+
 
 
 </div>
