--- a/templates/docs/sidebar_partials/sidebar-docs-standard-components.mustache
+++ b/templates/docs/sidebar_partials/sidebar-docs-standard-components.mustache
@@ -82,9 +82,9 @@
    <li>
       <a href="#toasts">Toast Notification</a>
       <ul class="nav">
-         <li><a href="#toasts-default">Default toast</a></li>
          <li><a href="#toasts-text">Text only</a></li>
          <li><a href="#toasts-imagetext">Image & Text</a></li>
+         <li><a href="#toasts-usage">Live demo</a></li>
       </ul>
    </li>
    <li>
