charts in pivot

--- a/templates/docs/_layout.mustache
+++ b/templates/docs/_layout.mustache
@@ -135,6 +135,7 @@
    <script type="text/javascript" src="assets/js/bootmetro-charms.js"></script>
    <script type="text/javascript" src="assets/js/bootstrap-datepicker.js"></script>
    <script type="text/javascript" src="assets/js/holder.js"></script>
+   <script type="text/javascript" src="assets/js/Chart.min.js"></script>
 
    <script type="text/javascript" src="assets/js/docs.js"></script>
 </body>
